--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a href="https://www.linkedin.com/in/teja-govvala-1a7a10302/" target="_blank" class="icon linkedin">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="Vinay_Resume.pdf" target="_blank" class="icon github">
+                    <a href="Vinay_Resume.docx" target="_blank" class="icon github">
                         <i class="fa-solid fa-file-lines"></i>
                     </a>
                     <a href="https://www.instagram.com/me_teja0905/" target="_blank" class="icon instagram" title="Instagram">
@@ -497,7 +497,7 @@
                     <a href="https://www.linkedin.com/in/teja-govvala-1a7a10302/" target="_blank" class="icon linkedin">
                         <i class="fab fa-linkedin"></i>
                     </a>
-                    <a href="Vinay_Resume.pdf" target="_blank" class="icon github">
+                    <a href="Vinay_Resume.docx" target="_blank" class="icon github">
                         <i class="fa-solid fa-file-lines"></i>
                     </a>
                     <a href="https://www.instagram.com/me_teja0905/" target="_blank" class="icon instagram" title="Instagram">
